feat: tests for photosharehandler